# male-drosophila-visual-system-connectome-code

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
AOTU_code/: AOTU041.ipynb  AOTU_Connectivity_May2025.ipynb  AOTU_DNs.ipynb  AOTU_ROIs.ipynb  AOTU_dsx_fru.ipynb  AOTU_fucntional_clustering.ipynb  AOTU_to_AOTUs.ipynb  AOTU_to_all.ipynb  Example_model_AOTU19_25.ipynb  LC10_neurons.ipynb  dsx_positive.xlsx  newAOTU.ipynb  show_one_neuronEPG.ipynb  testEPG.ipynb  trialAME.ipynb  weight_matrix_AOTU_AOTU.ipynb  weight_matrix_AOTU_fru_dsx_positive.ipynb  weight_matrix_LC_AOTU.ipynb
AOTU_results/: LC10a_R_ALLPostsynapticConnectionsinAOTU_R.csv  LC10a_R_AllPostsynapticConnections.csv  LC10a_R_AllPresynapticConnections.csv  LC10a_R_NeuronProperties.csv  LC10a_R_PostsynapticConnectionstoAOTUs.csv  LC10a_R_SynapsePerROICounts.csv  LC_R_NeuronProperties.csv  LC_R_SynapsePerROICounts.csv
cache/eyemap/: LOP_col_center_pins.pickle  LO_col_center_pins.pickle  ME_col_center_pins_old.pickle
docs/: panel-to-script.md  python-getting-started.md
docs/assets/: watermark_video.xcf
params/: Corrections.xlsx  Edge_cell_types.xlsx  Movie_curation.xlsx  Nern-et-al_Fig3d1.json  Nern-et-al_Fig3d2.json  Nern-et-al_Fig3d3.json  Nern-et-al_Fig3d4.json  Nern-et-al_FigED2d.json  Nern-et-al_FigED2e.json  Nern-et-al_SuppTable01_Cell-types-and-counts.xlsx  Nern-et-al_SuppTable05_Neurotransmitter_validation.xlsx  Primary_cell_type_table.xlsx  complete_metrics.pickle  confusion_df.csv  gt_count.csv  layer_creation_parameters.xlsx  layer_mesh_creation_parameters.xlsx
src/clustering/: clustering_examples.ipynb  clustering_examples.py  spatial_maps_clusters.ipynb  spatial_maps_clusters.py
src/column_features/: make_coverage_factor_hist.ipynb  make_coverage_factor_hist.py  plot_cov_compl_scatter_plots.ipynb  plot_cov_compl_scatter_plots.py  plot_cov_hex_subplots.ipynb  plot_cov_hex_subplots.py
src/completeness/: generate_completeness_plots.ipynb  generate_completeness_plots.py
src/connectivity/: adj_type.ipynb  adj_type.py
src/eyemap/: assign_columnar_types_to_hex.ipynb  assign_columnar_types_to_hex.py  create_col_lay_voxels.ipynb  create_col_lay_voxels.py  create_column_pins.ipynb  create_column_pins.py  create_layer_boundaries.ipynb  plot_all_syn.ipynb  plot_all_syn.py  plot_col_lay_table.ipynb  plot_col_lay_table.py  plot_pin_assignment.ipynb  plot_pin_assignment.py
src/fig_summary/: CellTypeCatalog_Title.typ  collate_summary_pages.ipynb  collate_summary_pages.py  neurontype_summary.py  plot_layer_def.ipynb  plot_layer_def.py  summary_figure_5b.ipynb  summary_figure_5b.py  summary_figure_8ef.ipynb  summary_figure_8ef.py
src/gallery_generation/: Optic-Lobe_Mi1-T4.json  Optic-Lobe_Mi1-T4_v2.json  Optic-Lobe_Mi1-T4_v3.json  Optic-Lobe_Mi1-T4_v4.json  Optic-Lobe_OLi_Fig5c_Dm3a.json  Optic-Lobe_OLi_Fig5c_Dm3a_cutoff.json  Optic-Lobe_OLi_Fig5c_Dm3b.json  Optic-Lobe_OLi_Fig5c_Dm3b_cutoff.json  Optic-Lobe_OLi_Fig5c_Dm3c.json  Optic-Lobe_OLi_Fig5c_Dm3c_cutoff.json  Optic-Lobe_TmY5a.json  Optic-Lobe_TmY5a_full_row.json  gallery-descriptions.json.jinja  generate_combined_full-brain.ipynb  generate_combined_full-brain.py  generate_combined_optic-lobe.ipynb  generate_combined_optic-lobe.py  generate_full_brain_groups_non_ol.ipynb  generate_full_brain_groups_non_ol.py  generate_full_brain_stars.ipynb  generate_full_brain_stars.py  generate_full_brain_stars_flipbook.ipynb  generate_full_brain_stars_flipbook.py  generate_full_brain_types_ame.ipynb  generate_full_brain_types_ame.py  generate_full_brain_types_dorsal_rim.ipynb  generate_full_brain_types_dorsal_rim.py  generate_full_brain_types_non_ol.ipynb  generate_full_brain_types_non_ol.py  generate_optic_lobe_neurons_of_interest.ipynb  generate_optic_lobe_neurons_of_interest.py  generate_optic_lobe_stars.ipynb  generate_optic_lobe_stars.py  render_optic-lobe.py
src/html_pages/: cell_types.html.jinja  generate_html-pages_from_scratch.ipynb  generate_html-pages_from_scratch.py  html-pages-jinja.html.jinja  index.html.jinja  patterns.py  (+8 more)
(+136 files in other folders)
